# rust-mcp-sqlite

./: Cargo.toml  README.md  README_ZH.md
.cargo/: config.toml
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-06-11-sqlite-mcp-rs.md  2026-06-13-vector-collections-tasks.csv  2026-06-14-embedding-import-reliability.md  2026-06-14-hybrid-text-collections.md  2026-06-14-text-embedding-collections.md
docs/superpowers/specs/: 2026-06-11-sqlite-mcp-rs-design.md  2026-06-13-vector-collections-design.md  2026-06-14-text-embedding-collections-design.md
src/: auth.rs  config.rs  embedding.rs  error.rs  lib.rs  main.rs  mcp.rs  response.rs  sql_classify.rs  sqlite.rs  vector.rs
tests/: auth_http.rs  config_cli.rs  embedding_client.rs  mcp_http.rs  sql_classify.rs  sqlite_executor.rs  vector_collections.rs
