[package]
name = "sqlite-mcp-rs"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false

[dependencies]
axum = "0.8"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
fallible-iterator = "0.3"
http = "1"
rmcp = { version = "1.7", features = ["server", "macros", "transport-streamable-http-server"] }
rusqlite = { version = "0.40", features = ["bundled", "functions", "hooks", "modern_sqlite"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlite-vec = "=0.1.9"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "net"] }
tokio-util = "0.7"
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
